# granite-web

./: .gitignore  Cargo.toml  README.md
src/cli/: banner  interface.rs
src/core/: config.rs  constants.rs  engine.rs  files.rs  mod.rs  server.rs  server_config.rs  templates.rs  tls.rs  watcher.rs
test/: binserve.json
test/hello_world/: index.html
